Add basic san francisco content.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       <section>
         <h2>Major Attractions</h2>
         <img src="#" alt="Major Attractions" />
-        <p>Description of major attractions with some context</p>
+        <h3>Attraction #1</h3>
+        <h3>Attraction #2</h3>
+        <h3>Attraction #3</h3>
       </section>
     </main>
   </body>
