Removed default styles for navigation
Created menu class for nav tag, then cleared default css styles. Changed orientation of the nav element to be horizontal

--- a/yangzhou.html
+++ b/yangzhou.html
@@ -10,7 +10,7 @@
 
 <header class="banner">
   <h1>Yangzhou</h1>
-  <nav>
+  <nav class="menu">
     <ul>
         <li><a href="yangzhou.html">Yangzhou</a></li>
         <li><a href="fuzhou.html">Fuzhou</a></li>
