Nav bar styling
Continued to style given the change of heading order. Changed font colors and size

--- a/yangzhou.html
+++ b/yangzhou.html
@@ -12,10 +12,10 @@
   <h1>metropolis</h1>
   <nav class="menu">
     <ul>
-        <li><a href="yangzhou.html">Yangzhou</a></li>
-        <li><a href="fuzhou.html">Fuzhou</a></li>
-        <li><a href="giza.html">Giza</a></li>
-        <li><a href="sf.html">San Fransico</a></li>
+        <li><a href="yangzhou.html">yangzhou</a></li>
+        <li><a href="fuzhou.html">fuzhou</a></li>
+        <li><a href="giza.html">giza</a></li>
+        <li><a href="sf.html">san fransico</a></li>
     </ul>
   </nav>
 </header> <!--Banner & Navigation -->
