--- a/yangzhou.html
+++ b/yangzhou.html
@@ -4,6 +4,11 @@
 <head>
   <title>Yangzhou</title>
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Fonts: -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Reggae+One&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -68,7 +73,7 @@
       <h3>History</h3>
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Yangzhou_massacre.jpg" alt="Late Qing artist"  class="restrict"/>
       <section>
-        <h3>Notable Events</h3>
+        <h4>Notable Events</h4>
         <p>Guangling , the first settlement in the Yangzhou area, was founded in the Spring and Autumn period. After the defeat of Yue by King Fuchai of Wu, a garrison city was built 12 m above the water level on the north bank of the Yangtze c. 485 BC. This city in the shape of a three by three li square was named Hancheng. </P>
         <p> The newly built Han canal formed a moat around the south and east sides of the city. The purpose of Hancheng was to protect Suzhou from naval invasion from Qi. During the Han dynasty, Guangling was the seat of Guangling Commandery. It constituted a part of the Xu Province, rather than the Yang Province, which was covered the entire southeastern part of China then. In 590, the city was made the capital of a newly established Yang Prefecture, and began to be referred to with its current name.</p>
         <p>Yangzhou is famous for its carved lacquerware and jade. Its famous "FeiCuiBaiCai" is a world famous carved jade and was displayed in the Chinese National Pavilions during the EXPO 2010 Shanghai Jade carving is one of the oldest carving varieties in China. Jade is processed and carved into exquisite crafts, called jade carvings. </p>
