Created footer element
Created footer element with information on website creators and source of content

--- a/yangzhou.html
+++ b/yangzhou.html
@@ -97,6 +97,12 @@
   </main> <!-- .box -->
 
 </div> <!-- .container -->
+
+  <footer>
+    <div>Source: <a href= "http://bmart13.digitalscholar.rochester.edu/assignment03/">San Fransico</a></div>
+    <div>Winnie Wan - Bianca Hall - Duncan Grubbs for DMS 290</div>
+  </footer>
+
 </body>
 
 </html>
