--- a/fuzhou.html
+++ b/fuzhou.html
@@ -17,10 +17,10 @@
   <h1>metropolis</h1>
   <nav class="menu">
     <ul>
-        <li><a href="yangzhou.html">yangzhou</a></li>
-        <li><a href="fuzhou.html">fuzhou</a></li>
-        <li><a href="giza.html">giza</a></li>
-        <li><a href="sf.html">san francisco</a></li>
+      <li><a href="fuzhou.html">fuzhou</a></li>
+      <li><a href="giza.html">giza</a></li>
+      <li><a href="sf.html">san francisco</a></li>
+      <li><a href="yangzhou.html">yangzhou</a></li>
     </ul>
   </nav>
   </header>
@@ -188,9 +188,9 @@
       <p>As a national first-class museum, the Fujian Museum has a collection of more than 170,000 relics and natural
         specimens.</p>
     </section>
-  </main> <!-- .box -->
+  </main> 
 
-</div> <!-- .container -->
+</div> 
 
 <footer>
   <div>Source: <a href= "http://bmart13.digitalscholar.rochester.edu/assignment03/">San Francisco</a></div>
