--- a/fuzhou.html
+++ b/fuzhou.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>metropolis</title>
+  <title>Metropolis</title>
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Fonts: -->
