--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header class="banner">
-        <h1>metropolis</h1>
+        <h1>Metropolis</h1>
         <nav class="menu">
           <ul>
-              <li><a href="fuzhou.html">fuzhou</a></li>
-              <li><a href="giza.html">giza</a></li>
-              <li><a href="sf.html">san francisco</a></li>
-              <li><a href="yangzhou.html">yangzhou</a></li>
+              <li><a href="fuzhou.html">Fuzhou</a></li>
+              <li><a href="giza.html">Giza</a></li>
+              <li><a href="sf.html">San Francisco</a></li>
+              <li><a href="yangzhou.html">Yangzhou</a></li>
           </ul>
         </nav>
     </header>
