fix homepage text

--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
                 <div class="formHere">
                     <br>
                     <p>
+                        Fuzhou lies on the north (left) bank of the estuary of Fujian's largest river.
+
+                        Giza is the second-largest city in Egypt after Cairo and
+                        fourth-largest city in Africa.
+
+                        San Francisco is a cultural, commercial, and financial center
+                        of Northern California.
+
+                        Yangzhou is a prefecture-level city in central Jiangsu Province, China.
+
                         There are many things unsaid about cities. Venture with us to learn everything a city has to offer.
                     </p>
                     <br>
