add link to homepage option

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="banner">
-        <h1>Metropolis</h1>
+        <h1><a href="index.html">Metropolis</a></h1>
         <nav class="menu">
           <ul>
               <li><a href="fuzhou.html">Fuzhou</a></li>
