--- a/sf.html
+++ b/sf.html
@@ -14,7 +14,7 @@
 <body>
 
 <header class="banner">
-  <h1>Metropolis</h1>
+  <h1><a href="index.html">Metropolis</a></h1>
   <nav class="menu">
     <ul>
       <li><a href="fuzhou.html">Fuzhou</a></li>
