fix homepage color contrast

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </p>
                     <br>
                     <br>
-                    <a href="fuzhou.html"><div class="button">Learn About Cities</div></a>
+                    <a href="fuzhou.html"><div class="button">Learn More</div></a>
                     
                 </div>
             </div>
