Make images consistent.

--- a/fuzhou.html
+++ b/fuzhou.html
@@ -114,6 +114,10 @@
               "5 districts and 8 counties" is still held popularly among local residents. Fuzhou's entire area only covers
               9.65 percent of Fujian Province.
             </p>
+          </div>
+        </section>
+        <section>
+          <div class="f-text">
             <h4>Transportation</h4>
             <p>
               Fuzhou metro now has Line 1 and Line 2 in service. Line 1 runs between Xiangfeng and South Railway Station.
