--- a/yangzhou.html
+++ b/yangzhou.html
@@ -60,15 +60,16 @@
           </div>
         </section>
         <section>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/Yangzhou_Railway_Station_-_P1070063.JPG " alt="Yangzhou railway station" class="restrict1"/>
           <div class="f-text">
             <h4>Transportation</h4>
             <p>Yangzhou has one Yangtze River crossing, the Runyang Yangtze River Bridge complex, which has one of the longest suspension bridge spans in the world, and carries the G4011 Yangzhou–Liyang Expressway to Zhenjiang.
             </p>
-            <p>The city is served by an extensive network of public bus routes.vYangzhou's taxi industry began in 1982, and has developed rapidly since 1993. the city has over 40 taxi companies of various ownership structures, with a total of 1,571 vehicles. Parking lots were established at key stations and hotels, and eight taxi companies have opened round-the-clock telephone service. The construction department of the municipal government has strengthened the management of taxi services, providing education in the relevant laws, professional ethics and safety aspects.</p>
+            <p>The city is served by an extensive network of public bus routes. Yangzhou's taxi industry began in 1982, and has developed rapidly since 1993. the city has over 40 taxi companies of various ownership structures, with a total of 1,571 vehicles. Parking lots were established at key stations and hotels, and eight taxi companies have opened round-the-clock telephone service. The construction department of the municipal government has strengthened the management of taxi services, providing education in the relevant laws, professional ethics and safety aspects.</p>
             <p>In 2014, Yangzhou's government approved plans for the construction of a subway system, which will initially include two lines. Line 1 will run in the general east-west direction, from Yangzhou Railway Station in the west to the historic central city to the future high-speed railway station (east of the Grand Canal) to Jiangdu District. Line 2 will run in the general north-south direction.</p>
           </div>
         </section>
+        <section>
+        <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/Yangzhou_Railway_Station_-_P1070063.JPG " alt="Yangzhou railway station" class="banner-img"/> -->
         </section>
         <section>
           <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Yangzhou_massacre.jpg" alt="Late Qing artist"  class="restrict"/>
