--- a/giza.html
+++ b/giza.html
@@ -2,22 +2,24 @@
 <html lang="en">
   <head>
     <title>Metropolis</title>
-    <link rel="stylesheet" href="css/style.css">
     <!-- Fonts: -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Reggae+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="banner">
-      <h1><a href="index.html">Metropolis</a></h1>
-      <nav class="menu">
-        <ul>
-          <li><a href="fuzhou.html">Fuzhou</a></li>
-          <li><a href="giza.html">Giza</a></li>
-          <li><a href="sf.html">San Francisco</a></li>
-          <li><a href="yangzhou.html">Yangzhou</a></li>
-        </ul>
-      </nav>
+    <header class="banner-wrapper">
+      <div class="banner">
+        <h1><a href="index.html">Metropolis</a></h1>
+        <nav class="menu">
+          <ul>
+            <li><a href="fuzhou.html">Fuzhou</a></li>
+            <li><a href="giza.html">Giza</a></li>
+            <li><a href="sf.html">San Francisco</a></li>
+            <li><a href="yangzhou.html">Yangzhou</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <div class="container">
       <main class="box">
