Make z text bigger.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
           <div class="formHere">
             <br>
-            <p>
+            <p class="z-text">
               Fuzhou lies on the north (left) bank of the estuary of Fujian's largest river.
               Giza is the second-largest city in Egypt after Cairo and
               fourth-largest city in Africa.
