--- a/fuzhou.html
+++ b/fuzhou.html
@@ -23,7 +23,9 @@
     </header>
     <div class="container">
       <main class="box">
-        <h2>Fuzhou</h2>
+        <section class="title-quote">
+          <h2>Fuzhou</h2>
+        </section>
         <section>
           <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Fuzhou_Taixi_CBD.jpg" alt="Fuzhou Skyline Skyline" class="restrict"/>
           <div class="f-text">
