--- a/giza.html
+++ b/giza.html
@@ -23,7 +23,10 @@
     </header>
     <div class="container">
       <main class="box">
-        <h2>Giza</h2>
+        <section class="title-quote">
+          <h2>Giza</h2>
+          <p><em>“Many hidden truths are often unobserved, not invisible.” ― Matthew A. Petti</em></p>
+        </section>
         <section>
           <img src="https://images.idgesg.net/images/article/2019/06/cio_middle_east_egypt_cairo_skyline_giza_pyramids_by_nirian_gettyimages-641697142_2400x1600-100799872-large.jpg" alt="Skyline" class="restrict"/>
           <div class="f-text">
