--- a/sf.html
+++ b/sf.html
@@ -23,7 +23,10 @@
     </header>
     <div class="container">
       <main class="box">
-        <h2>San Francisco</h2>
+        <section class="title-quote">
+          <h2>San Francisco</h2>
+          <p><em>"If you’re not alive, San Francisco will bring you to life." -- William Saroyan</em></p>
+        </section>
         <section>
           <img src="http://bmart13.digitalscholar.rochester.edu/assignment03/images/san_Francisco.jpg"
             alt="San Francisco Skyline Skyline" class="restrict"/>
