--- a/yangzhou.html
+++ b/yangzhou.html
@@ -23,7 +23,10 @@
     </header>
     <div class="container">
       <main class="box">
-        <h2>Yangzhou</h2>
+        <section class="title-quote">
+          <h2>Yangzhou</h2>
+          <p><em>"I was born in Yangzhou, China, two years after World War II ended. I was 5 when my family escaped to Taiwan. Eight years later, we moved to Japan." -- Andrew Cherng</em></p>
+        </section>
         <section>
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/The_Five_Pavilion_bridge.jpg/500px-The_Five_Pavilion_bridge.jpg" alt="Yangzhou" class="restrict"/>
           <div class="f-text">
