changed source reference to winnies previous repo

--- a/yangzhou.html
+++ b/yangzhou.html
@@ -107,7 +107,7 @@
     </div>
     <!-- .container -->
     <footer>
-      <div>Source: <a href= "http://bmart13.digitalscholar.rochester.edu/assignment03/">San Francisco</a></div>
+      <div>Source: <a href= "https://github.com/winniewan/DMS290-Project1">San Francisco</a></div>
       <div>Winnie Wan - Aman Shrestha - Duncan Grubbs for DMS 290</div>
     </footer>
     <script src="http://code.jquery.com/jquery.js"></script> 
